# kmp-poc

./: .gitignore  AGENTS.md  CLAUDE.md  DEPENDENCY_INJECTION.md  README.md  c-sharp-crypto.md  gradle.properties  gradlew-clean-build.sh  odin.db  run-all-tests.sh  run-android-instrumented-tests.sh  run-ios-tests-ci.sh  run-ios-tests.sh  settings.gradle.kts
.agent/workflows/: build-ffmpeg-ios.md
.github/workflows/: build-check.yml  unit-tests.yml
.run/: All_Tests.run.xml
composeApp/: .gitignore  build.gradle.kts  lint-baseline.xml
composeApp/libs/ffmpeg-android/arm64-v8a/lib/pkgconfig/: libavcodec.pc  (+5 more)
composeApp/libs/ffmpeg.xcframework/libavcodec.xcframework/: Info.plist
composeApp/libs/ffmpeg.xcframework/libavfilter.xcframework/: Info.plist
composeApp/libs/ffmpeg.xcframework/libavformat.xcframework/: Info.plist
composeApp/libs/ffmpeg.xcframework/libavutil.xcframework/: Info.plist
composeApp/libs/ffmpeg.xcframework/libswresample.xcframework/: Info.plist
composeApp/libs/ffmpeg.xcframework/libswscale.xcframework/: Info.plist
composeApp/src/androidInstrumentedTest/assets/test-images/: README.md
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/jni/: CMakeLists.txt  ffmpeg_jni.c
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/androidUnitTest/assets/test-images/: test-images
composeApp/src/nativeInterop/cinterop/: ffmpeg.def  ffmpegkit.def
composeApp/src/wasmJsMain/resources/: index.html
gradle/: libs.versions.toml
icons/: icon.icns
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: Info.plist  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
scripts/: build-ffmpeg-android.sh  build-ffmpeg-ios.sh
(+728 files in other folders)
